<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/background_info"
                android:textColor="@color/primarytext"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/what_is_co2_heading"
                android:textColor="@color/primarytext"
                android:textSize="18dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/what_is_co2_description"
                android:textColor="@color/secondarytext"
                android:textSize="16dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/food_and_co2_heading"
                android:textColor="@color/primarytext"
                android:textSize="18dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/food_and_co2_description"
                android:textColor="@color/secondarytext"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/icon_description"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/piechart"/>

            <TextView
                android:text="@string/co2_calculator_heading"
                android:textColor="@color/primarytext"
                android:textSize="18dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/co2_calculator_description"
                android:textColor="@color/secondarytext"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/icon_description"
                android:src="@drawable/graph"/>

            <TextView
                android:text="@string/co2_accurate_heading"
                android:textColor="@color/primarytext"
                android:textSize="18dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/co2_accurate_description"
                android:textColor="@color/secondarytext"
                android:textSize="16dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

