<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/greenFood"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_weight="1"
        android:text="@string/question_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/numberpicker_heading"
            android:textSize="16dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/numberpicker_heading2"
            android:textSize="16dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greenFood"
        android:layout_marginBottom="20dp"/>


    <com.byteme.greenfoodchallenge.NumberPicker
        android:id="@+id/item0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.byteme.greenfoodchallenge.NumberPicker
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.byteme.greenfoodchallenge.NumberPicker
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.byteme.greenfoodchallenge.NumberPicker
        android:id="@+id/item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="0dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/previous_button" />

        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minHeight="0dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/next_button" />
    </LinearLayout>

</LinearLayout>